# mujoco_manipulation

./: .gitignore  README.md
examples/: load_any_xml.py
mj_ros2/: help.md
mj_sim/: help.md  pyproject.toml
mj_sim/assets/franka_emika_panda/: config_cyro_audi.yaml  dual_franka.yaml  dual_panda.xml  dual_scene.xml  franka.yaml
mj_sim/examples/: dual_arm_task_pose.py
mj_sim/sim/: CyRo.xml  __init__.py  constants.py  controller.py  loader.py  mj_model.py  pinocchio_sync.py  scene_cyro_audi.xml  scene_empty.xml  sim_types.py  simulator.py  telemetry.py  test_bed.py  urdf2xml.py  viewer_frames.py
